--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o05I8fwF&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nn9mWLw4'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
+<h5><a href='http://Unbxd.recruiterbox.com/jobs/fk03f85'>
+    Technical Program Manager at Unbxd Inc
+</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SEIU775BenefitsGroup1/743999692040772-sr-project-manager'>SEIU 775 Benefits Group Sr. Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o05I8fwF&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nn9mWLw4'>Cirrus Logic Careers - Silicon Development Program Manager</a></h5> 
+<p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ddb/job/ofGDafws'>DDB Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='http://jobs.jobvite.com/ddb/job/ofGDafws'>DDB Careers - Project Manager</a></h5> 
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/carta/f79b1da0-e77c-4c75-9f6d-56c3eb60918b'>Carta - Technical Program Manager, Liquidity</a></h5> 
@@ -60,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/looker/fef69d5f-1640-4d17-9d8e-7acf694bf841'>Looker - Program Manager, Enterprise Programs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/looker/fef69d5f-1640-4d17-9d8e-7acf694bf841'>Looker - Program Manager, Enterprise Programs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -90,11 +100,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tyro/b6ccab6e-2735-4cd6-bbef-60e10b14b174'>Tyro - Payments Project Manager - Fixed Term 12 mos</a></h5> 
+<h5><a href='https://jobs.lever.co/tyro/b6ccab6e-2735-4cd6-bbef-60e10b14b174'>Tyro - Payments Project Manager - Fixed Term 12 mos</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -102,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/sr-project-manager-associate-director-oncology-adoptive-cell-therapy-team-3486'>Sr Project Manager / Associate Director - Oncology Adoptive Cell Therapy Team - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -142,7 +152,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://modus.recruiterbox.com/jobs/fk03ft7/'>
+<h5><a href='https://modus.recruiterbox.com/jobs/fk03ft7/'>
     UX Project Manager at Modus
 </a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
@@ -164,7 +174,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://multiplica-1.workable.com/j/B739B5CF79'>Multiplica - Jobs: Digital Project Manager (WEB) - Apply online</a></h5> 
+<h5><a href='https://multiplica-1.workable.com/j/B739B5CF79'>Multiplica - Jobs: Digital Project Manager (WEB) - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -176,11 +186,11 @@
 <p><span class="badge badge-light">Washington, DC Washington, D.C.</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1784586'>Job Application for Strategic Program Manager, NPI - Global Supply Chain at JUUL Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1784586'>Job Application for Strategic Program Manager, NPI - Global Supply Chain at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA Dallas, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -289,7 +299,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-alliancebernstein.icims.com/jobs/6309/project-manager-business-analyst/job'>Project Manager/Business Analyst in Nashville, Tennessee ...</a></h5> 
+<h5><a href='https://careers-alliancebernstein.icims.com/jobs/6309/project-manager-business-analyst/job'>Project Manager/Business Analyst in Nashville, Tennessee ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... TN-Nashville is now hiring a Project Manager/Business Analyst in Nashville, 
 Tennessee. Review all of the job details and apply today!</p>
@@ -317,7 +327,7 @@ ups,?...</p>
 <p>5 days ago ... Senior Solution Architect. Australia. Core Business Services. Requisition #: 
 AUS001HI. Solution Platform Engineer. Australia. Core Business Services.</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/velodyne/jobs/1789027'>Job Application for Automotive Project Manager at Velodyne</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/velodyne/jobs/1789027'>Job Application for Automotive Project Manager at Velodyne</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -333,7 +343,7 @@ AUS001HI. Solution Platform Engineer. Australia. Core Business Services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
+<h5><a href='http://modus.recruiterbox.com/jobs/fk03ft7'>
     UX Project Manager at Modus
 </a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
@@ -412,7 +422,7 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/trendkite/6b566378-553a-4bd7-9873-b34a87f00c41'>TrendKite/Cision - Senior Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trendkite/6b566378-553a-4bd7-9873-b34a87f00c41'>TrendKite/Cision - Senior Technical Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -456,14 +466,6 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <hr/>
 <h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-translation-project-manager-580'>Senior Translation Project Manager - NATO Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://waremalcomb.applytojob.com/apply/LlCWnhlqax/Project-Manager-Architecture'>Project Manager, Architecture - Ware Malcomb - Career Page</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 
